Modification msg validate (unique)
