# server/src/models/module.ts
@@ -40,7 +40,10 @@ Module.init(
         name: {
             type: DataTypes.STRING,
             allowNull: false,
-            unique: true,
+            unique: {
+                name: "unique_name",
+                msg: "Ce nom est déjà utilisé.",
+            },
             validate: {
                 notNull: {
                     msg: "Le nom du module ne doit pas être null.",
@@ -57,6 +60,10 @@ Module.init(
         link: {
             type: DataTypes.STRING,
             allowNull: false,
+            unique: {
+                name: "unique_name",
+                msg: "Ce lien est déjà utilisé.",
+            },
             validate: {
                 notNull: {
                     msg: "Le lien du module ne doit pas être null.",
@@ -125,25 +132,3 @@ Module.init(
 );
 
 export default Module;
-
-// SELECT
-//     m.id AS module_id,
-//     m.name AS module_name,
-//     m.description,
-//     m.likes AS total_likes,
-//     CASE
-//         WHEN l.UserId IS NOT NULL THEN 1
-//         ELSE 0
-//     END AS is_liked
-// FROM Modules m
-// LEFT JOIN Likes l ON m.id = l.ModuleId AND l.UserId = '019494fe-56f4-75f7-8907-e76dc77dba76'
-// WHERE l.UserId = '019494fe-56f4-75f7-8907-e76dc77dba76';
-
-// SELECT
-//     m.*,
-//     CASE
-//         WHEN l.UserId IS NOT NULL THEN 1
-//         ELSE 0
-//     END AS is_liked
-// FROM Modules m
-// LEFT JOIN Likes l ON m.id = l.ModuleId AND l.UserId = '019494fe-56f4-75f7-8907-e76dc77dba76'
